--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
 </head>
 <body>
     <div class="painel">
-        <h1>Feliz dia dos namorados!!!</h1>
+        <h1 class="titulo">Feliz dia dos namorados!!!</h1>
 
-        <h2>Me ama?</h2>
+        <h2 class="txt">Você me ama?</h2>
 
-        <div>
+        <div class="btn">
             <button id="sim" onclick="clicou()">Sim</button>
             <button id="nao" onmouseover="fuja()">Não</button>
         </div>
-
-        <img src="img/hollow-knight.png" alt="">
-        
     </div>
 
     <script src="script.js"></script>
