--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="painel">
+        <audio id="music" autoplay src="img/Hollow Knight (Title Theme).mp3"></audio>
+
         <h1 class="titulo">Feliz dia dos namorados!!!</h1>
 
         <h2 class="txt">Você me ama?</h2>
