--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="painel">
-        <audio id="music" autoplay src="img/Hollow Knight (Title Theme).mp3"></audio>
+        <audio id="music" src="img/Hollow Knight (Title Theme).mp3" autoplay></audio>
 
         <h1 class="titulo">Feliz dia dos namorados!!!</h1>
 
-        <h2 class="txt">Você me ama?</h2>
+        <h2 class="txt">Aceita ser minha Hornet?</h2>
 
         <div class="btn">
             <button id="sim" onclick="clicou()">Sim</button>
