--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="painel">
-        <audio id="music" src="img/Hollow Knight (Title Theme).mp3" autoplay></audio>
+        <audio id="music" src="img/Hollow Knight (Title Theme).mp3"></audio>
 
         <h1 class="titulo">Feliz dia dos namorados!!!</h1>
 
